# sanitization

./: .gitignore  BARRIERS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EVIDENCE.md  GUARANTEES.md  LEAKAGE_TESTS.md  README.md  ROADMAP.md  SAFETY.md  SECURITY.md  TARGETS.md  THREAT_MODEL.md  ct-evidence.json  deny.toml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cp20-evidence.yml  kani.yml  miri.yml  security-evidence.yml
crates/sanitization/: Cargo.toml
crates/sanitization-arrayvec/: Cargo.toml  README.md
crates/sanitization-arrayvec/src/: lib.rs
crates/sanitization-bytes/: Cargo.toml  README.md
crates/sanitization-bytes/src/: lib.rs
crates/sanitization-crypto-interop/: Cargo.toml  README.md
crates/sanitization-crypto-interop/src/: blake3.rs  hmac_sha2.rs  lib.rs  sha2.rs
crates/sanitization-derive/: Cargo.toml  README.md
crates/sanitization-derive/src/: lib.rs
crates/sanitization/examples/: alloc.rs  ct_primitives.rs  high_assurance.rs  high_assurance_policy.rs  macros.rs  storage_contracts.rs  wipe.rs
crates/sanitization/src/: canary.rs  ct.rs  interop.rs  lib.rs  mapped.rs  owned.rs  platform.rs  tests.rs  wipe.rs  wipe_backend.rs
crates/sanitization/src/mapped/: bounded.rs  guard_pages.rs  memory_lock_native.rs  memory_lock_wasm.rs  protection.rs
crates/sanitization/tests/: derive.rs  miri_downstream.rs
docs/: ADVANCED_USAGE.md  BACKPORTS_1.2.x.md  BARRIERS.md  DEPLOYMENT_HARDENING.md  ERASURE_BACKENDS.md  ERROR_HANDLING.md  EVIDENCE.md  FEATURES.md  FEATURE_PROFILES.md  GUARANTEES.md  IMPLEMENTATION_PLAN_2.0.0.md  LEAKAGE_TESTS.md  MIGRATION_2.0.md  NON_GUARANTEES.md  PROTECTION_REPORT.md  REPRODUCIBLE_BUILDS.md  ROADMAP.md  ROADMAP_2.0.0.md  SAFETY.md  SCOPE_2.0.0.md  STORAGE_CONTRACTS.md  TARGETS.md  THREAT_MODEL.md  VERIFICATION_TOOLING.md  ct-evidence.json  migration-2.0.json  release-evidence-2.0.0.json  verification-harnesses.json
docs/baselines/2.0/: BASELINE_1.2.5.md  CP-01_MODULE_SPLIT.md  CP-02_STORAGE_CONTRACTS.md  CP-03_GENERIC_SECRET_EXPOSURE.md  CP-04_DIRECT_FIXED_EXPOSURE.md  CP-05_FIXED_ALLOCATION.md  CP-06_CT_DECLASSIFICATION.md  CP-07_SECRET_CT_OWNERSHIP.md  CP-08_FAIL_CLOSED_DERIVES.md  CP-09_ARRAYVEC_BACKING.md  CP-10_WIPE_BACKEND.md  CP-21_PUBLIC_API.md  CP-22_API_FREEZE.md  CP-23_RELEASE_PREPARATION.md  baseline-1.2.5.json  cp21-public-api.json  cp22-semver-review.json  current-source-api.json
docs/baselines/2.0/public-api/: metadata.json  sanitization-arrayvec.txt  sanitization-bytes.txt  sanitization-crypto-interop.txt  sanitization-derive.txt  sanitization.txt
examples/: alloc.rs  basic.rs  high_assurance.rs  unsafe_wipe.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ct_primitives.rs  owned_lifecycle.rs
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_1.0.0-rc.1.md  RELEASE_NOTES_1.0.0-rc.2.md  RELEASE_NOTES_1.0.0-rc.3.md  RELEASE_NOTES_1.0.0-rc.4.md  RELEASE_NOTES_1.0.0-rc.5.md  RELEASE_NOTES_1.0.0-rc.6.md  RELEASE_NOTES_1.0.0.md  RELEASE_NOTES_1.0.1.md  RELEASE_NOTES_1.1.0.md  RELEASE_NOTES_1.1.1.md  RELEASE_NOTES_1.2.0-alpha.1.md  RELEASE_NOTES_1.2.0-alpha.2.md  RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.2.1.md  RELEASE_NOTES_1.2.2.md  RELEASE_NOTES_1.2.3.md  RELEASE_NOTES_1.2.4.md  RELEASE_NOTES_1.2.5.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.0.1.md  RELEASE_NOTES_2.0.2.md  RELEASE_NOTES_2.0.3.md
sanitization-derive/: Cargo.toml  README.md
sanitization-derive/src/: lib.rs
scripts/: capture-2.0-api.py  capture-2.0-baseline.py  capture-2.0-public-api.py  capture-target-evidence.py  check-latest-rust.py  check-rust-version-matrix.sh  checks.sh  ci_install_rust.sh  collect-leakage-evidence.py  evidence-report.py  lint-declassification-reasons.py  lint-fail-closed-initialization.py  lint-storage-policies.py  release_1_1.py  release_crates.py  source_api_inventory.py  test-2.0-checkpoint.sh  test-declassification-reasons.py  test-fail-closed-initialization-lint.py  test-latest-rust.py  test-release-readiness.sh  test-storage-policy-lint.py  test-verification-fail-closed.py  validate-2.0-checkpoint.sh  validate-current-2.0-checkpoint.sh  validate-release-readiness.sh  verify-2.0-api-freeze.py  verify-2.0-module-split.py  verify-action-pins.sh  verify-codegen-artifact.py  verify-codegen-matrix.sh  verify-codegen.sh  verify-core-dump-probe.sh  verify-ct-declassification.sh  verify-dependency-policy.sh  verify-derive-failures.sh  verify-downstream-migration.py  verify-evidence.py  verify-feature-profiles.py  verify-kani.sh  (+10 more)
security/pentest/: v0.1.0.md  v1.0.0-rc.1.md  v1.0.0-rc.2.md  v1.0.0-rc.3.md  v1.0.0-rc.4.md  v1.0.0-rc.5.md  v1.0.0-rc.6.md  v1.0.0.md  v1.0.1.md  v1.1.0.md  v1.1.1.md  v1.2.0-alpha.1.md  v1.2.0-alpha.2.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.2.4.md  v1.2.5.md  v2.0.0.md  v2.0.1.md  v2.0.2.md  v2.0.3.md
security/pentest/2.0-development/: CP-00.md  CP-01.md
src/: lib.rs
tests/: derive.rs
tools/consume-once-loom/: Cargo.toml  README.md
tools/consume-once-loom/src/: lib.rs
tools/core-dump-probe/: Cargo.toml
tools/core-dump-probe/src/: main.rs
tools/ct-leakage/: Cargo.toml  README.md
tools/ct-leakage/src/: main.rs
tools/direct-exposure-codegen/: Cargo.toml
tools/direct-exposure-codegen/src/: main.rs
tools/downstream-migration/: Cargo.toml  README.md
tools/downstream-migration/src/: lib.rs
tools/lifecycle-probes/: Cargo.toml  README.md
tools/lifecycle-probes/src/: lib.rs
tools/performance-baseline/: Cargo.toml  README.md
tools/performance-baseline/src/: main.rs
