[workspace]
members = [
    "crates/sanitization",
    "crates/sanitization-arrayvec",
    "crates/sanitization-bytes",
    "crates/sanitization-crypto-interop",
    "crates/sanitization-derive",
]
default-members = ["crates/sanitization"]
resolver = "2"

[workspace.package]
version = "2.0.1"
edition = "2021"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/valkyoth/sanitization"
repository = "https://github.com/valkyoth/sanitization"
