[package]
name = "sanitization-bytes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "bytes::BytesMut integration wrappers for the sanitization crate."
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/sanitization-bytes"
homepage.workspace = true
repository.workspace = true
keywords = ["zeroize", "secrets", "security", "bytes", "memory"]
categories = ["cryptography", "memory-management"]
include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
]

[package.metadata.sanitization]
role = "companion"
clearing-owner = "sanitization"

[dependencies]
bytes = { version = "1.11.1", default-features = false }
sanitization = { version = "2.0.1", path = "../sanitization", default-features = false, features = ["alloc"] }

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
