[package]
name = "sanitization-crypto-interop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Crypto crate interop helpers for the sanitization crate."
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/sanitization-crypto-interop"
homepage.workspace = true
repository.workspace = true
keywords = ["zeroize", "secrets", "security", "crypto", "hash"]
categories = ["cryptography", "memory-management", "no-std"]
include = [
    "Cargo.toml",
    "src/**/*.rs",
    "README.md",
]

[package.metadata.sanitization]
role = "companion"
clearing-owner = "sanitization"

[features]
default = ["asm-compare"]
asm-compare = ["sanitization/asm-compare"]
std = ["sanitization/std"]
sha2 = ["dep:sha2", "dep:zeroize"]
blake3 = ["dep:blake3", "dep:zeroize"]
hmac-sha2 = ["sha2"]
strict-compare = ["sanitization/strict-compare"]

[dependencies]
blake3 = { version = "1.8.5", default-features = false, features = ["zeroize"], optional = true }
sanitization = { version = "2.0.1", path = "../sanitization", default-features = false }
sha2 = { version = "0.11.0", default-features = false, features = ["alloc", "zeroize"], optional = true }
zeroize = { version = "1", default-features = false, optional = true }

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
