[package]
name = "sanitization-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Optional derive macros for the sanitization crate."
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/sanitization-derive"
homepage.workspace = true
repository.workspace = true
keywords = ["zeroize", "secrets", "security", "derive"]
categories = ["cryptography", "no-std", "memory-management"]
include = ["Cargo.toml", "README.md", "src/**/*.rs"]

[lib]
proc-macro = true

[features]
default = []
strict-enum-derive = []

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
