[package]
name = "direct-exposure-codegen"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
sanitization = { path = "../../crates/sanitization", features = [
    "alloc",
    "derive",
    "guard-pages",
    "memory-lock",
    "page-seal",
    "strict-compare",
] }
sanitization-arrayvec = { path = "../../crates/sanitization-arrayvec" }
