[package]
name = "direct-exposure-codegen"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
sanitization = { version = "2.0.0", path = "../../crates/sanitization", features = [
    "alloc",
    "derive",
    "guard-pages",
    "memory-lock",
    "page-seal",
    "strict-compare",
] }
sanitization-arrayvec = { version = "2.0.0", path = "../../crates/sanitization-arrayvec" }
